# specode_cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/specode/: __init__.py  agent.py  cli.py  config.py  input.py  repository.py  session.py  steering.py  ui.py
steering/: product.md  structure.md  tech.md  testing.md
tests/: test_agent.py  test_cli.py  test_config.py  test_input.py  test_repository.py  test_session.py  test_steering.py
tests/e2e/: test_cli_process.py  test_terminal_pty.py
