[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specode"
version = "0.1.0"
description = "A terminal-first AI chat assistant built with Typer, Rich, and Pydantic AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai",
    "prompt-toolkit",
    "python-dotenv",
    "rich",
    "typer",
]

[project.scripts]
specode = "specode.cli:main"

[dependency-groups]
dev = [
    "pexpect",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/specode"]

[tool.pytest.ini_options]
addopts = '-q -m "not pty"'
markers = [
    "e2e: marks end-to-end CLI tests",
    "pty: marks PTY-backed terminal tests that are excluded from default pytest runs",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
